fixed spacing

--- a/flaskr/static/styles/style.css
+++ b/flaskr/static/styles/style.css
@@ -24,7 +24,7 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 .content textarea { min-height: 12em; resize: vertical; }
 input.danger { color: #cc2f2e; } */
 
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400,500,600,700;1,400..700&display=swap');
 /*
 Fonts:
 Inter: font-family: 'Inter', sans-serif;
@@ -45,10 +45,11 @@ input[type=submit] { align-self: start; min-width: 10em; }
 }
 
 body {
-    font-family: 'Inter', sans-serif;
+    /* font-family: 'Inter', sans-serif;
     background: white;
     margin: 0;
-    height: 100%;
+    height: 100%; */
+    overflow: hidden;
 }
 
 span {
@@ -99,11 +100,17 @@ h1 {
     display: flex;
     align-items: center; 
     padding: 20px;
-    padding-right: 15%;
+    padding-right: %;
 }
 
+.img-large {
+    width: 100%; /* Adjust the width as needed */
+    height: auto; /* Maintain the aspect ratio */
+    max-width: 800px; /* Optional: Set a maximum width if needed */
+  }
+
 /******************************************Form*/
-.form {
+/* .form {
     flex: 1;
     padding: 0 20px;
 }
@@ -145,7 +152,7 @@ input[type=file] {
     border-radius: 3px;
     color: #FFFFFF;
     /* font-size: 0.7rem; */
-}
+} */
 
 /*********************************Images*/
 .image {
